[project]
name = "colabs"
version = "0.1.0"
description = ""
authors = [
    {name = "pandelis-giankulidis",email = "pantelis.giankoulidis+1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "pyspark (>=4.1.0,<5.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "notebook (>=7.5.3,<8.0.0)",
    "csrgraph (>=0.1.28,<0.2.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "nltk (>=3.9.3,<4.0.0)",
    "bloom-filter (>=1.3.3,<2.0.0)"
]

[tool.poetry]
packages = [{include = "colabs", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
