[project]
name = "hw3"
version = "0.1.0"
description = ""
authors = [
    {name = "pandelis-giankulidis",email = "pantelis.giankoulidis+1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy (>=2.4.2,<3.0.0)",
    "pyspark (>=4.1.1,<5.0.0)"
]

[tool.poetry]
packages = [{include = "hw3", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
